--- a/css/style.css
+++ b/css/style.css
@@ -1,378 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 1 | @use 'utilidades/variables';
+ *   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   scss\style.scss 1:1  root stylesheet */
 
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: #febbd1;
-  color: #333;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @use 'utilidades/variables';\d\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   scss\\style.scss 1:1  root stylesheet";
 }
-
-html, body {
-  height: auto;
-  overflow: visible;
-  position: relative;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-main {
-  background-color: #febbd1;
-  overflow: visible;
-  position: relative;
-  max-width: 100%;
-}
-
-@media (max-width: 900px) {
-  /* MAIN - section1 */
-  .container1 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    align-items: center;
-    padding: 30px 20px;
-  }
-  .container1 .container1__sobrenosotros {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .container1 .container1__sobrenosotros p {
-    width: 100%;
-    font-size: 18px;
-    text-align: justify;
-  }
-  .container1 .container1__sobrenosotros h5 {
-    font-size: 28px;
-    margin-bottom: 15px;
-  }
-  .container1 .container1__carrousel {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-  }
-  /* FOOTER */
-  .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    gap: 20px;
-  }
-  .footer .footer__navegacion,
-  .footer .footer__contacto,
-  .footer .footer__seguinos,
-  .footer .footer__envios,
-  .footer .container__mediosdepago {
-    width: 100%;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  .footer .seguinos__redes,
-  .footer .envios__logos,
-  .footer .mediospago__logos {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 15px;
-  }
-  .footer .seguinos__redes img,
-  .footer .envios__logos img,
-  .footer .mediospago__logos img {
-    max-width: 60px;
-    width: 100%;
-    height: auto;
-  }
-  .footer .footer__navegacion a {
-    font-size: 18px;
-  }
-  /* MAIN - section2 (container2) */
-  .container2 {
-    flex-direction: column;
-    height: auto;
-    padding: 40px 20px;
-    justify-content: center;
-  }
-  .container2__texto {
-    max-width: 100%;
-    font-size: 18px;
-    text-align: center;
-  }
-}
-main {
-  padding: 2rem;
-}
-
-.container1 {
-  width: 100%;
-  padding: 2%;
-}
-.container1 .container1__sobrenosotros p {
-  width: 99%;
-  text-align: center;
-  text-align: justify;
-  margin-left: 2px;
-  font-size: 16px;
-}
-.container1 .container1__carrousel {
-  width: 90%;
-  height: 100%;
-  margin: auto;
-}
-
-/*accordion - preguntas frecuentes*/
-.accordion-button:not(.collapsed) {
-  background-color: #f5a9bc;
-  color: #333;
-}
-
-.container__acordion {
-  margin: 60px auto;
-  width: 90%;
-  max-height: 350px;
-  overflow-y: scroll;
-  padding-right: 10px;
-  padding: 30px;
-  background-color: rgb(254, 155, 206);
-  border-radius: 12px;
-  box-shadow: 0px 0px 45px palevioletred !important;
-}
-.container__acordion h5 {
-  font-size: 23px;
-  color: #d63384;
-  margin-bottom: 30px;
-  font-weight: bold;
-}
-.container__acordion .accordion-item {
-  border: none;
-  margin-bottom: 15px;
-  border-radius: 8px;
-  overflow: hidden;
-  background-color: rgb(254, 155, 206) !important;
-}
-.container__acordion .accordion-item .accordion-button:hover {
-  background-color: #febbd1 !important;
-  color: #333 !important;
-}
-
-/* container2 gradiente*/
-.container2 {
-  display: grid;
-  width: 100%;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  padding: 2rem;
-  margin-bottom: 10%;
-  justify-content: center;
-  position: relative;
-  background-color: #f5a9bc;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
-.container2__texto {
-  color: #333;
-  text-align: center;
-  position: absolute;
-  width: 300px;
-  padding-top: 20px;
-}
-
-.form__contacto {
-  text-align: center;
-  border-style: solid;
-  border-color: rgb(247, 138, 229);
-  margin: auto;
-  margin-top: 20px;
-  border-style: 15px;
-  color: rgb(6, 6, 6);
-  max-width: 90%;
-  box-shadow: 0px 0px 45px palevioletred;
-  background-color: #fdf1f7;
-}
-.form__contacto .form__input {
-  padding: 6px 20px;
-}
-.form__contacto .form__input input,
-.form__contacto textarea {
-  width: 80%;
-  align-items: center;
-  box-sizing: border-box;
-  background-color: transparent;
-  margin-top: 15px;
-  border: none;
-  border: 1px solid #e80861;
-  box-shadow: 0px 0px 55px rgba(252, 171, 232, 0.6);
-}
-
-@keyframes zoom-in-out {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-footer {
-  background-color: #f5a9bc;
-  color: white;
-  text-align: center;
-  width: 100%;
-  height: auto;
-  padding: 30px 20px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-self: start;
-  color: #333;
-}
-footer .footer__navegacion {
-  margin-bottom: 10px;
-  padding-top: 10px;
-}
-footer .footer__contacto {
-  background-color: #e80861;
-  width: 90%;
-  max-width: 600px;
-  margin: 15px auto;
-  border: 2px solid palevioletred;
-  border-radius: 10px;
-  text-align: center;
-}
-footer .telefono {
-  display: inline-block;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-align: center;
-  animation: zoom-in-out 2s ease-in-out infinite;
-}
-footer .footer__seguinos {
-  padding-top: 10px;
-  width: 100%;
-  text-align: center;
-}
-footer .footer__seguinos .seguinos__redes {
-  display: flex;
-  justify-content: space-around;
-  gap: 10px;
-  flex-wrap: wrap;
-  margin-bottom: 10px;
-}
-footer .footer__seguinos .seguinos__redes a img {
-  width: 30px;
-  height: auto;
-  transition: transform 0.2s ease;
-}
-footer .footer__seguinos .seguinos__redes .seguinos__redes a:hover img {
-  transform: scale(1.1);
-}
-footer .footer__envios {
-  padding-top: 20px;
-  padding-bottom: 15px;
-}
-footer .footer__envios h3 {
-  margin-bottom: 15px;
-}
-footer .footer__envios .envios__logos {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 30px;
-  /* espacio entre logos */
-  flex-wrap: wrap;
-  /* permite que bajen si no entran */
-}
-footer .footer__envios .envios__logos img {
-  width: 70px;
-  height: auto;
-  transition: transform 0.3s ease;
-}
-footer .container__mediosdepago {
-  width: 100%;
-  height: auto;
-  padding-top: 15px;
-}
-footer .container__mediosdepago h3 {
-  padding-top: 20px;
-}
-footer .container__mediosdepago .mediospago__logos {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 2px;
-  flex-wrap: wrap;
-}
-footer .container__mediosdepago .mediospago__logos img {
-  max-width: 50px;
-  height: auto;
-  transition: transform 0.3s ease;
-}
-
-.producto-card {
-  background-color: white;
-  border-radius: 1rem;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transition: transform 0.3s;
-}
-.producto-card:hover {
-  transform: scale(1.05);
-}
-.producto-card img {
-  width: 100%;
-  height: auto;
-}
-.producto-card .info {
-  padding: 1rem;
-  text-align: center;
-}
-
-.producto-individual {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-.producto-individual .imagen {
-  width: 80%;
-  margin-bottom: 1rem;
-}
-.producto-individual .descripcion {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 0.5rem;
-}
-
-.oferta {
-  background-color: #febbd1;
-  padding: 2rem;
-  text-align: center;
-  animation: parpadeo 1s infinite alternate;
-}
-
-@keyframes parpadeo {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0.5;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
