--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -1,10 +1,5 @@
 @use "..//abstract/variables";
 
-@mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  } 
   @mixin size($width, $height) {
     width: $width;
     height: $height;
@@ -16,11 +11,6 @@
   @mixin text-aling{
     text-align: center;
     text-align: justify;
-  }
-  @mixin titulo($size: 2rem) {
-    font-size: $size;
-    font-weight: bold;
-    text-align: center;
   }
   @mixin title-pink{
    font-size: 23px;
@@ -66,8 +56,17 @@
     box-shadow: 0px 0px 55px rgba(252, 171, 232, 0.6);
   }
   }
-  @mixin flex-footer{
-    display: flex;
-  flex-direction: column;
-  align-self: start;
-  }
+  @mixin style-border{
+    border: 2px solid ;border-color: variables.$color-border;}
+    @mixin titulo{
+      font-weight: 500;
+      color: black;
+    }
+    @mixin flex($justify: flex-start, $align: stretch, $direction: row, $wrap: nowrap) {
+      display: flex;
+      justify-content: $justify;
+      align-items: $align;
+      flex-direction: $direction;
+      flex-wrap: $wrap;
+    }
+    
