--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,18 +1,20 @@
-@use 'utilidades/variables';
-@use 'utilidades/mixins';
-@use 'utilidades/reset';
-@use 'utilidades/base';
+@use 'abstract/variables';
+@use 'abstract/mixins';
+@use 'abstract/listas';
 
 
-@use 'layout/responsive';
+@use 'layout/main';
+@use 'layout/formulario';
+@use 'layout/footer';
+@use 'layout/header';
+@use 'layout/responsive-pc';
 
-@use 'componentes/main';
-@use 'componentes/container1';
-@use 'componentes/accordion';
-@use 'componentes/container2';
-@use 'componentes/formulario';
-@use 'componentes/footer';
-@use 'componentes/producto-card';
-@use 'componentes/producto-individual';
-@use 'componentes/oferta';
-@use "utilidades/animaciones" as anims;
+@use 'base/reset';
+@use 'base/base';
+
+@use 'utilidades/flex-utils';
+@use 'utilidades/animaciones';
+
+@use 'componentes/containers';
+@use 'componentes/acordion1';
+@use 'componentes/form-contacto';
