--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -8,6 +8,8 @@ $color-acordion: rgb(254, 155, 206);
 $color-holder: rgb(247, 59, 125);
 $color-title :
  #d63384;
+ $color-oferta:#d70014;
+ $color-hover: rgba(252, 5, 133, 0.902);
 
 //border-shadow
 $box-shadow: 0px 0px 45px palevioletred !important;
