--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,16 +1,17 @@
 
 // _variables.scss
+$color-main:rgba(255, 255, 255, 0.6);
 $color-primario: #f5a9bc;
-$color-secundario: #febbd1;
+$color-secundario:#f48fb1;
 $color-texto: #333;
 $color-destacado: rgb(234, 9, 144);
 $color-acordion: rgb(254, 155, 206);
 $color-holder: rgb(247, 59, 125);
-$color-title :
+$color-title:
  #d63384;
  $color-oferta:#d70014;
  $color-hover: rgba(252, 5, 133, 0.902);
-
+ $color-h1:rgb(119, 5, 56);
 //border-shadow
 $box-shadow: 0px 0px 45px palevioletred !important;
 $color-border:rgb(247, 138, 229);
