--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,7 +6,6 @@ body {
     font-family: variables.$fuente-principal;
     background-color: variables.$color-secundario;
     color: variables.$color-texto;
-
   }
   html, body{
     height: auto;
@@ -17,7 +16,7 @@ body {
     height: auto;
   }
   main{
-    background-color: variables.$color-secundario;
+    background-color: variables.$color-main;
     @include mixins.position-container;
     max-width: 100%;
     
@@ -27,12 +26,16 @@ body {
       width: 100%;
       height: auto;
       padding: 30px 20px;
-      background-color: #ff69b4 ;
+      background-color: variables.$color-secundario;
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
       align-self: start;
     
+    }
+    header{
+      background-color: variables.$color-secundario;
+
     }
     /*producto1*/
 
@@ -50,7 +53,7 @@ body {
 }
 
 .productos__relacionados h2 {
-  color: variables.$color-title;
+  color: variables.$color-h1;
   margin-bottom: 1.5rem;
 }
 
