--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -6,3 +6,10 @@
   box-sizing: border-box;
   font-family: vars.$fuente-principal;  
 }
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-weight: inherit;
+}
+
