--- a/scss/main-index/_acordion1.scss
+++ b/scss/main-index/_acordion1.scss
@@ -6,13 +6,14 @@
   max-height: 350px;
   overflow-y: scroll;
   padding: 30px 10px 30px 30px;
-  background-color: #bb045d8f;
+  background-color :#fdf1f7;;
   border-radius: 12px;
   box-shadow: 0px 0px 45px palevioletred;
+  
 
   h5 {
     font-size: 28px;
-    color: variables.$color-acordion;
+    color:#C2185B ;
     margin-bottom: 30px;
     font-weight: bold;
     text-align: center;
@@ -25,11 +26,13 @@
     border-radius: 8px;
     overflow: hidden;
     background-color: aliceblue;
+    box-shadow: 0px 0px 45px palevioletred;
+   
   }
 
   .accordion-button {
   background-color: #fff;
-  color: variables.$color-destacado;
+  color:#C2185B ;
   font-weight: bold;
 
   &:hover {
