--- a/scss/main-index/_containers.scss
+++ b/scss/main-index/_containers.scss
@@ -25,7 +25,7 @@
 
 .container1__carrousel {
   @include mixins.size(100% ,80%);
-    margin: auto;
+   margin: auto;
    
   }}
 
@@ -34,19 +34,17 @@
   width: 100%;
   height: 500px;
   color: black;
-  @include mixins.size(100%, 600px);
+  @include mixins.size(95%, auto);
   @extend.flex-center-center;
-  background: linear-gradient(to top, rgba(241, 125, 167, 0.6), rgba(245, 32, 156, 0.6)), url(./imagenes/estudio.png.jpg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+  background: linear-gradient(to top, rgba(241, 125, 167, 0.4), rgba(233, 30, 99, 0.4));
+  margin: auto;
+ 
 
   .container2__texto {
     
-    width: 300px;
+    width: 90%;
     padding-top: 20px;
-    text-align: center;
-    
+    margin: auto;
   }
 }
 
