--- a/scss/main-index/_containers.scss
+++ b/scss/main-index/_containers.scss
@@ -11,14 +11,16 @@
 
  h5 {
    padding-top:10px;
+   padding-bottom: 10px;
+   
     @include mixins.titulo;
     p{
-       width: 90%;
+      width: 90%;
       text-align: center;
       text-align: justify;
       margin-left: 10px;
       font-size: 16px;
-      padding-top:10px;
+      padding-top:15px;
       padding-left:5px;
   }
 }
